# zephyr-si5351-driver

./: CMakeLists.txt  Kconfig  README.md  si5351.c  west.yml
app/: CMakeLists.txt  prj.conf
app/boards/: rpi_pico.overlay
app/src/: main.c
drivers/: CMakeLists.txt  Kconfig
drivers/si5351/: CMakeLists.txt  Kconfig  si5351.c  si5351_regmap.h
dts/bindings/: silabs,si5351.yaml
include/: si5351.h
include/drivers/: si5351.h
include/dt-bindings/: si5351.h
zephyr/: module.yml
